pythonParser.java
// Generated from python.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		ID=25, STRING=26, INT=27, WS=28;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_comprehension = 2, RULE_expression = 3, 
		RULE_condition = 4, RULE_slicing = 5, RULE_concatenation = 6, RULE_appendInsertRemove = 7, 
		RULE_assign = 8, RULE_declare = 9, RULE_list = 10, RULE_value = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stat", "comprehension", "expression", "condition", "slicing", 
			"concatenation", "appendInsertRemove", "assign", "declare", "list", "value"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'['", "'for'", "'in'", "'if'", "']'", "'max'", "'len'", 
			"'abs'", "'('", "')'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"':'", "'+'", "'.'", "'append'", "'remove'", "'insert'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "STRING", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "python.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		java.util.Map<String, java.util.ArrayList<Object>> idToList = new java.util.HashMap<>();

	public pythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(24);
				stat();
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public DeclareContext declare() {
			return getRuleContext(DeclareContext.class,0);
		}
		public AppendInsertRemoveContext appendInsertRemove() {
			return getRuleContext(AppendInsertRemoveContext.class,0);
		}
		public ConcatenationContext concatenation() {
			return getRuleContext(ConcatenationContext.class,0);
		}
		public SlicingContext slicing() {
			return getRuleContext(SlicingContext.class,0);
		}
		public ComprehensionContext comprehension() {
			return getRuleContext(ComprehensionContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(35);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				declare();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(31);
				appendInsertRemove();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(32);
				concatenation();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(33);
				slicing();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(34);
				comprehension();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComprehensionContext extends ParserRuleContext {
		public Token ID;
		public ExpressionContext expression;
		public ConditionContext condition;
		public List<TerminalNode> ID() { return getTokens(pythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pythonParser.ID, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ComprehensionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comprehension; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).enterComprehension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).exitComprehension(this);
		}
	}

	public final ComprehensionContext comprehension() throws RecognitionException {
		ComprehensionContext _localctx = new ComprehensionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_comprehension);
		 
							java.util.ArrayList<Object> newListt = new java.util.ArrayList<>();
						     boolean cond=false; 
							
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			((ComprehensionContext)_localctx).ID = match(ID);
			idToList.put((((ComprehensionContext)_localctx).ID!=null?((ComprehensionContext)_localctx).ID.getText():null), newListt);
			setState(39);
			match(T__0);
			setState(40);
			match(T__1);
			setState(41);
			((ComprehensionContext)_localctx).expression = expression();
			setState(42);
			match(T__2);
			setState(43);
			((ComprehensionContext)_localctx).ID = match(ID);
			if ((((ComprehensionContext)_localctx).ID!=null?((ComprehensionContext)_localctx).ID.getText():null) != ((ComprehensionContext)_localctx).expression.variablee) System.out.println("index variable does not match with expression");
			setState(45);
			match(T__3);
			setState(46);
			((ComprehensionContext)_localctx).ID = match(ID);
			setState(47);
			match(T__4);
			setState(48);
			((ComprehensionContext)_localctx).condition = condition();
			setState(49);
			match(T__5);

								  java.util.ArrayList<Object> arList = idToList.get((((ComprehensionContext)_localctx).ID!=null?((ComprehensionContext)_localctx).ID.getText():null));
								  for(int i=0; i<arList.size();i++){
								      Object obj = arList.get(i);
									  Integer oper1 =null; 
									  Integer oper2 = null;
								      if(((ComprehensionContext)_localctx).condition.operand1.equals("len")){
										
									     if(obj instanceof String){
										   String temp = (String) obj;
										   oper1 = new Integer(temp.length()-2);
										 }else if(obj instanceof java.util.ArrayList){
										   java.util.ArrayList<Object> temp = (java.util.ArrayList<Object>) obj;
										   oper1 = new Integer(temp.size());
										 }
									  }else if (((ComprehensionContext)_localctx).condition.operand1.equals("abs")){
										  if(obj instanceof Integer){
											int temp= (Integer) obj;
										    oper1 = new Integer(Math.abs(temp));
										  }
									  }else {
										oper1 = new Integer(((ComprehensionContext)_localctx).condition.int1);
									  }
									  
									  if(((ComprehensionContext)_localctx).condition.operand2 != null){
										if(((ComprehensionContext)_localctx).condition.operand2.equals("len")){
											if(obj instanceof String){
												String temp = (String) obj; 
												oper2 = new Integer(temp.length());
											}else if(obj instanceof java.util.ArrayList){
												java.util.ArrayList<Object> temp = (java.util.ArrayList<Object>) obj;
												oper2 = new Integer(temp.size());
											}
										}else if (((ComprehensionContext)_localctx).condition.operand2.equals("abs")){
											if(obj instanceof Integer){
										    int temp= (Integer) obj;
										    oper2 = new Integer(Math.abs(temp));
										  }
										}
									  }else {
											oper2 = new Integer(((ComprehensionContext)_localctx).condition.int2);
										}
									  
									  if(((ComprehensionContext)_localctx).condition.op.equals("==")) cond = oper1 == oper2;
									  else if(((ComprehensionContext)_localctx).condition.op.equals("!=")) cond = oper1 != oper2;
									  else if(((ComprehensionContext)_localctx).condition.op.equals("<")) cond = oper1 < oper2;
									  else if(((ComprehensionContext)_localctx).condition.op.equals(">")) cond = oper1 > oper2;
									  else if(((ComprehensionContext)_localctx).condition.op.equals("<=")) cond = oper1 <= oper2;
									  else if(((ComprehensionContext)_localctx).condition.op.equals(">=")) cond = oper1 >= oper2;
									  
									if(cond){
									  if(((ComprehensionContext)_localctx).expression.function ==null){
									     newListt.add(obj);
									  }else{
											if(((ComprehensionContext)_localctx).expression.function.equals("max") && obj instanceof String){
												char max = 'A';
												String temp = (String) obj;
												for (int j=0; j<temp.length();j++){
												     if(temp.charAt(j) >max){
													    max = temp.charAt(j);
													 }
												}
												newListt.add(max);
											}
											else if(((ComprehensionContext)_localctx).expression.function.equals("len")){
												if(obj instanceof String) {
												  String temp = (String) obj;
												  newListt.add(temp.length());
												}else if(obj instanceof java.util.ArrayList){
												  java.util.ArrayList<Object> temp = (java.util.ArrayList<Object>) obj;
												  newListt.add(temp.size());
												}
											}
											else if(((ComprehensionContext)_localctx).expression.function.equals("abs")){
												if(obj instanceof Integer){
													Integer temp = (Integer) obj;
													newListt.add(temp);
													}
												}
											}
									}
								  }
								  
								
			}
			_ctx.stop = _input.LT(-1);

						         System.out.println(java.util.Arrays.toString(newListt.toArray()));
								
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public String variablee;
		public String function;
		public Token ID;
		public Token funct;
		public TerminalNode ID() { return getToken(pythonParser.ID, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		int _la;
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				((ExpressionContext)_localctx).ID = match(ID);
				((ExpressionContext)_localctx).variablee =  (((ExpressionContext)_localctx).ID!=null?((ExpressionContext)_localctx).ID.getText():null);
				}
				break;
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(54);
				((ExpressionContext)_localctx).funct = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
					((ExpressionContext)_localctx).funct = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				setState(55);
				match(T__9);
				setState(56);
				((ExpressionContext)_localctx).ID = match(ID);
				setState(57);
				match(T__10);

									   ((ExpressionContext)_localctx).function =  (((ExpressionContext)_localctx).funct!=null?((ExpressionContext)_localctx).funct.getText():null);
									   ((ExpressionContext)_localctx).variablee =  (((ExpressionContext)_localctx).ID!=null?((ExpressionContext)_localctx).ID.getText():null);
									 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public String operand1;
		public Integer int1;
		public String op;
		public String operand2;
		public Integer int2;
		public String variable1;
		public String variable2;
		public Token INT;
		public Token funct1;
		public Token ID;
		public Token oper;
		public Token funct2;
		public List<TerminalNode> INT() { return getTokens(pythonParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(pythonParser.INT, i);
		}
		public List<TerminalNode> ID() { return getTokens(pythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pythonParser.ID, i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).exitCondition(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(61);
				((ConditionContext)_localctx).INT = match(INT);
				}
				break;
			case T__7:
			case T__8:
				{
				{
				setState(62);
				((ConditionContext)_localctx).funct1 = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__7 || _la==T__8) ) {
					((ConditionContext)_localctx).funct1 = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(63);
				match(T__9);
				setState(64);
				((ConditionContext)_localctx).ID = match(ID);
				setState(65);
				match(T__10);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			   
					     ((ConditionContext)_localctx).operand1 =  (((ConditionContext)_localctx).funct1!=null?((ConditionContext)_localctx).funct1.getText():null);
						 
						 if((((ConditionContext)_localctx).INT!=null?((ConditionContext)_localctx).INT.getText():null) != null) ((ConditionContext)_localctx).int1 =  new Integer(Integer.parseInt((((ConditionContext)_localctx).INT!=null?((ConditionContext)_localctx).INT.getText():null)));
						 ((ConditionContext)_localctx).variable1 =  (((ConditionContext)_localctx).ID!=null?((ConditionContext)_localctx).ID.getText():null);			 
					 
			setState(69);
			((ConditionContext)_localctx).oper = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0)) ) {
				((ConditionContext)_localctx).oper = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(70);
				((ConditionContext)_localctx).INT = match(INT);
				}
				break;
			case T__7:
			case T__8:
				{
				{
				setState(71);
				((ConditionContext)_localctx).funct2 = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__7 || _la==T__8) ) {
					((ConditionContext)_localctx).funct2 = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(72);
				match(T__9);
				setState(73);
				((ConditionContext)_localctx).ID = match(ID);
				setState(74);
				match(T__10);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			   
					     ((ConditionContext)_localctx).op =  (((ConditionContext)_localctx).oper!=null?((ConditionContext)_localctx).oper.getText():null);
					     ((ConditionContext)_localctx).operand2 =  (((ConditionContext)_localctx).funct2!=null?((ConditionContext)_localctx).funct2.getText():null);
						 if((((ConditionContext)_localctx).INT!=null?((ConditionContext)_localctx).INT.getText():null) != null) ((ConditionContext)_localctx).int2 =  new Integer(Integer.parseInt((((ConditionContext)_localctx).INT!=null?((ConditionContext)_localctx).INT.getText():null)));
						 ((ConditionContext)_localctx).variable2 =  (((ConditionContext)_localctx).ID!=null?((ConditionContext)_localctx).ID.getText():null);	
						 if (_localctx.variable1 == null && _localctx.variable2==null) System.out.println("error");
						 if (_localctx.variable1 !=null && _localctx.variable2 != null && !_localctx.variable1.equals(_localctx.variable2))
						     System.out.println("error2");
					 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SlicingContext extends ParserRuleContext {
		public Token ID;
		public Token INT;
		public List<TerminalNode> ID() { return getTokens(pythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(pythonParser.ID, i);
		}
		public List<TerminalNode> INT() { return getTokens(pythonParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(pythonParser.INT, i);
		}
		public SlicingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_slicing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).enterSlicing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pythonListener ) ((pythonListener)listener).exitSlicing(this);
		}
	}

	public final SlicingContext slicing() throws RecognitionException {
		SlicingContext _localctx = new SlicingContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_slicing);

						java.util.ArrayList<Object> newListt = new java.util.ArrayList<>();
						Integer beginIndex= new Integer(0);
						Integer endIndex;
						java.util.ArrayList<Object> gettt;
					  
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((SlicingContext)_localctx).ID = match(ID);
			idToList.put((((SlicingContext)_localctx).ID!=null?((SlicingContext)_localctx).ID.getText():null), newListt);
			setState(81);
			match(T__0);
			setState(82);
			((SlicingContext)_localctx).ID = match(ID);

						                                                   gettt = idToList.get((((SlicingContext)_localctx).ID!=null?((SlicingContext)_localctx).ID.getText():null));
																		   endIndex = new Integer(gettt.size());
																		  
			setState(84);
			match(T__1);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT) {
				{
				setState(85);
				((SlicingContext)_localctx).INT = match(INT);

																							beginIndex = new Integer(Integer.parseInt((((SlicingContext)_localctx).INT!=null?((SlicingContext)_localctx).INT.getText():null)));
																			              
				}
			}

			setState(89);
			match(T__17);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT) {
				{
				setState(90);
				((SlicingContext)_localctx).INT = match(INT);

																						                 endIndex= new Integer(Integer.parseInt((((SlicingContext)_localctx).INT!=null?((SlicingContext)_localctx).INT.getText():null)));
																						                
				}
			}

			setState(94);
			match(T__5);
			}
			_ctx.stop = _input.LT(-1);

					        for(int i=beginIndex; i<endIndex;i++){
							  newListt.add(gettt.get(i));
							}
							System.out.println("Slicing");
							System.out.println(java.util.Arrays.toString(newListt.toArray()));
					      
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
